[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
maia = { path = "..", features = ["window"] }
winit = { version = "0.30", features = ["rwh_06"] }
anyhow = { version = "1.0", features = ["backtrace"] }
bytemuck = { version = "1.0", features = ["derive"] }
ultraviolet = { version = "0.9", features = ["bytemuck"] }
jpeg-decoder = { version = "0.2", default-features = false }
futures = "0.3"
futures-channel = "0.3"
scoped-tls = "1.0"

[build-dependencies]
shaderc = "0.8"
